unpackaged/main/default/objects/GBLite__GridBuddySettings__c/GBLite__GridBuddySettings__c.object-meta.xml
<CustomObject>
    <label>GridBuddySettings</label>
    <nameField>
        <displayFormat>GB-{0000}</displayFormat>
        <label>GridBuddySettings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GridBuddySettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>