unpackaged/main/default/objects/GBLite__GridBuddySettings__c/fields/GBLite__Default_Definition__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Default_Definition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Definition</label>
    <type>Checkbox</type>
</CustomField>