unpackaged/main/default/objects/GBLite__GridBuddySettings__c/fields/GBLite__Definition__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Definition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Definition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>