unpackaged/main/default/objects/GBLite__GridBuddySettings__c/fields/GBLite__Grid_Name__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Grid_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Grid Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>